# AP1-Ex4

./: CLI.cpp  CLI.h  CMakeLists.txt  CanberraDistance.cpp  CanberraDistance.h  ChebyshevDistance.cpp  ChebyshevDistance.h  Client.cpp  Command.cpp  Command.h  CommandFive.cpp  CommandFive.h  CommandFour.cpp  CommandFour.h  CommandOne.cpp  CommandOne.h  CommandThree.cpp  CommandThree.h  CommandTwo.cpp  CommandTwo.h  DefaultIO.cpp  DefaultIO.h  Distance.cpp  Distance.h  EuclidianDistance.cpp  EuclidianDistance.h  IfstreamToMap.cpp  IfstreamToMap.h  KNN.cpp  KNN.h  Makefile  ManhattanDistance.cpp  ManhattanDistance.h  MinkowskiDistance.cpp  MinkowskiDistance.h  README.md  Server.cpp  SocketIO.cpp  SocketIO.h  StandardIO.cpp  (+9 more)
